--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.14</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+			</plugin>
 		</plugins>
 	</build>
 
