--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.imvs</groupId>
 	<artifactId>sdes4j</artifactId>
-	<version>1.1.4</version>
+	<version>1.1.5-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>sdes4j</name>
 	<description>SDES (RFC4568) implementation for Java</description>
@@ -21,7 +21,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/ibauersachs/sdes4j.git</connection>
 		<url>https://github.com/ibauersachs/sdes4j</url>
-	  <tag>r1.1.4</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<developers>
 		<developer>
