--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: java
 Priority: optional
 Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
 Uploaders: Ingo Bauersachs <ingo@jitsi.org>
-Build-Depends: debhelper (>= 9), cdbs, default-jdk, maven-debian-helper (>= 1.5)
+Build-Depends: debhelper (>= 10~), cdbs, default-jdk, maven-debian-helper (>= 1.5)
 Build-Depends-Indep: libmaven-bundle-plugin-java, libcommons-codec-java, junit4, default-jdk-doc,
  libcommons-codec-java-doc, libmaven-javadoc-plugin-java
 Standards-Version: 3.9.8
